refactor logs and views: reduce log fetch interval to 1 second and redirect after 3 seconds

--- a/pages/templates/pages/logs.html
+++ b/pages/templates/pages/logs.html
@@ -11,10 +11,10 @@
       if (!data.running) {
         setTimeout(() => {
           window.location.href = "/?status=Задача успешно завершена!";
-        }, 10000); // через 10 секунд перенаправляем на домашнюю страницу
+        }, 3000); // через 3 секунды перенаправляем на домашнюю страницу
       }
     }
-    setInterval(fetchLogs, 2000); // обновляем каждые 2 сек
+    setInterval(fetchLogs, 1000); // обновляем каждые 1 сек
     window.onload = fetchLogs;
   </script>
 </head>
